2007-08-11  Ludovic Courtès  <ludo@gnu.org>

	* srfi-35.scm: New file.
	* Makefile.am (srfi_DATA): Added `srfi-35.scm'.

2007-07-18  Stephen Compall  <s11@member.fsf.org>

	* srfi-37.scm: New file.
	* Makefile.am: Add it.

2007-07-09  Ludovic Courtès  <ludo@gnu.org>

	* srfi-19.scm (date->julian-day): Take OFFSET into account.
	Patch by Jon Wilson <j85wilson@fastmail.fm>.

2007-05-09  Ludovic Courtès  <ludo@chbouib.org>

	* srfi-19.scm (priv:current-time-process): Removed shadowing
	definition that returned a list.  Use the right argument order to
	`make-time'.  Reported by Scott Shedden.

2006-12-02  Kevin Ryde  <user42@zip.com.au>

	* srfi-60.c (scm_srfi60_copy_bit): Should be long not int for fixnum
	bitshift, fixes 64-bit systems setting a bit between 32 and 63.
	Reported by Aaron M. Ucko, Debian bug 396119.

2006-05-28  Kevin Ryde  <user42@zip.com.au>

	* srfi-1.scm, srfi-1.c, srfi-1.h (append-reverse, append-reverse!):
	Rewrite in C.

2006-05-20  Kevin Ryde  <user42@zip.com.au>

	* srfi-1.c (scm_srfi1_assoc): Correction to comparison procedure
	argument order, SRFI-1 specifies given key is first.

2006-02-06  Marius Vollmer  <mvo@zagadka.de>

	* srfi-1.scm, srfi-60.scm: Updated versions in library name to
	match GUILE-VERSION.

2006-02-04  Kevin Ryde  <user42@zip.com.au>

	* srfi-1.c (scm_srfi1_delete, scm_srfi1_delete_duplicates): Use a
	count to protect against nasty code in the equality procedure changing
	the lists we're working on.  The results don't have to be sensible in
	that case, just not hang or access non-cells.

	* srfi-60.c (booleans->integer): Avoid newline in macro, it breaks the
	snarfer.

2005-11-24  Kevin Ryde  <user42@zip.com.au>

	* srfi-1.scm, srfi-1.c, srfi-1.h (lset-difference!): Rewrite in C.

2005-08-19  Kevin Ryde  <user42@zip.com.au>

	* srfi-19.scm (priv:leap-second-table): Add new 2005 leap second.

2005-08-12  Marius Vollmer  <mvo@zagadka.de>

	* srfi-1.c: Use scm_is_null instead of SCM_NULLP.  Thanks to
	Peter Gavin!
